[gd_scene load_steps=11 format=3 uid="uid://dan3ho5qssm7m"]

[ext_resource type="Script" path="res://Scripts/selection.gd" id="1_dlqva"]
[ext_resource type="Texture2D" uid="uid://bhfnd5swkicko" path="res://Assets/Images/Main menu/AI main menu.jpg" id="1_vtl0l"]
[ext_resource type="Texture2D" uid="uid://brtahp5f7b2kd" path="res://Assets/Images/Map/Regions Map V2.png" id="3_t46qc"]
[ext_resource type="FontFile" uid="uid://dctpjyh7kmln5" path="res://Assets/Fonts/lunchds.ttf" id="4_j3d88"]
[ext_resource type="FontFile" uid="uid://4tcfdreedvj7" path="res://Assets/Fonts/origa___.ttf" id="5_k85o7"]
[ext_resource type="FontFile" uid="uid://digngypwyodm2" path="res://Assets/Fonts/VT323-Regular.ttf" id="6_kdngl"]
[ext_resource type="FontFile" uid="uid://5xp1he0qf153" path="res://Assets/Fonts/SUBWT___.ttf" id="7_p6dvg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qloxl"]
bg_color = Color(0.0991234, 0.536292, 0.0413927, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8i6yq"]
bg_color = Color(0.672618, 0.306406, 0.0304877, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aobe6"]
bg_color = Color(0.344541, 0.0465703, 0.0781569, 1)

[node name="Selection" type="Node2D"]
script = ExtResource("1_dlqva")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.8183, 16.2113)
color = Color(0, 0, 0, 1)

[node name="AiMainMenu" type="Sprite2D" parent="ColorRect"]
position = Vector2(27.0314, 19.986)
scale = Vector2(0.0167962, 0.0258888)
texture = ExtResource("1_vtl0l")

[node name="RegionsMapV2" type="Sprite2D" parent="ColorRect"]
position = Vector2(6.35971, 23.0704)
scale = Vector2(0.0399052, 0.0709382)
texture = ExtResource("3_t46qc")

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 3.19241
offset_top = 1.17202
offset_right = 103.192
offset_bottom = 24.172
scale = Vector2(0.0712382, 0.155641)
theme_override_fonts/font = ExtResource("4_j3d88")
text = "Select Game:"

[node name="2p" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 9.0
offset_right = 214.0
offset_bottom = 50.0
scale = Vector2(0.0370112, 0.0658368)
theme_override_fonts/font = ExtResource("5_k85o7")
theme_override_styles/normal = SubResource("StyleBoxFlat_qloxl")
text = "2 Players"

[node name="3p" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 13.0
offset_right = 210.0
offset_bottom = 54.0
scale = Vector2(0.0375737, 0.0663145)
theme_override_fonts/font = ExtResource("5_k85o7")
theme_override_styles/normal = SubResource("StyleBoxFlat_8i6yq")
text = "3 Players"

[node name="4p" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 3.01892
offset_top = 17.2719
offset_right = 199.019
offset_bottom = 54.2719
scale = Vector2(0.0396415, 0.0720608)
theme_override_fonts/font = ExtResource("5_k85o7")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_aobe6")
text = "4 Players"

[node name="select" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 11.2776
offset_top = 7.34056
offset_right = 51.2775
offset_bottom = 47.3406
scale = Vector2(0.726908, 0.634991)
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="done_2p" type="Button" parent="ColorRect/select"]
layout_mode = 0
offset_left = 31.5539
offset_top = 32.9317
offset_right = 126.554
offset_bottom = 79.9317
scale = Vector2(0.0611492, 0.120913)
theme_override_fonts/font = ExtResource("5_k85o7")
text = "Done"

[node name="Label" type="Label" parent="ColorRect/select"]
layout_mode = 0
offset_left = 1.43211
offset_top = 1.55432
offset_right = 101.432
offset_bottom = 35.5543
scale = Vector2(0.0574382, 0.131398)
theme_override_fonts/font = ExtResource("6_kdngl")
theme_override_font_sizes/font_size = 24
text = "Player 1:"

[node name="menu_1" type="OptionButton" parent="ColorRect/select/Label"]
layout_mode = 0
offset_left = 107.0
offset_top = 1.0
offset_right = 637.0
offset_bottom = 31.0
scale = Vector2(1.02618, 1.0085)
theme_override_font_sizes/font_size = 18
alignment = 1
text_overrun_behavior = 1

[node name="Label2" type="Label" parent="ColorRect/select"]
layout_mode = 0
offset_left = 1.43211
offset_top = 6.89722
offset_right = 101.432
offset_bottom = 40.8972
scale = Vector2(0.0574382, 0.131398)
theme_override_fonts/font = ExtResource("6_kdngl")
theme_override_font_sizes/font_size = 24
text = "Player 2:"

[node name="menu_2" type="OptionButton" parent="ColorRect/select/Label2"]
layout_mode = 0
offset_left = 107.0
offset_top = 1.0
offset_right = 582.0
offset_bottom = 30.0
scale = Vector2(1.14931, 1.04655)
theme_override_font_sizes/font_size = 0
alignment = 1
text_overrun_behavior = 1

[node name="Label3" type="Label" parent="ColorRect/select"]
layout_mode = 0
offset_left = 1.09795
offset_top = 11.5601
offset_right = 101.098
offset_bottom = 45.5601
scale = Vector2(0.0574382, 0.131398)
theme_override_fonts/font = ExtResource("6_kdngl")
theme_override_font_sizes/font_size = 24
text = "Player 3:"

[node name="menu_3" type="OptionButton" parent="ColorRect/select/Label3"]
layout_mode = 0
offset_left = 107.0
offset_top = 1.2
offset_right = 544.0
offset_bottom = 24.2
scale = Vector2(1.24908, 1.17881)
theme_override_font_sizes/font_size = 15
alignment = 1
text_overrun_behavior = 1

[node name="Label4" type="Label" parent="ColorRect/select"]
layout_mode = 0
offset_left = 1.2889
offset_top = 16.7087
offset_right = 101.289
offset_bottom = 50.7087
scale = Vector2(0.0574382, 0.131398)
theme_override_fonts/font = ExtResource("6_kdngl")
theme_override_font_sizes/font_size = 24
text = "Player 4:"

[node name="menu_4" type="OptionButton" parent="ColorRect/select/Label4"]
layout_mode = 0
offset_left = 107.0
offset_top = 2.0
offset_right = 629.0
offset_bottom = 25.0
scale = Vector2(1.04346, 1.10011)
theme_override_font_sizes/font_size = 17
alignment = 1
text_overrun_behavior = 1

[node name="Button" type="Button" parent="ColorRect/select"]
layout_mode = 0
offset_left = 0.859199
offset_top = 33.5146
offset_right = 193.859
offset_bottom = 64.5146
scale = Vector2(0.0771094, 0.116804)
text = "Balance Mode: Disabled"

[node name="info_button" type="Button" parent="ColorRect/select/Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.08
anchor_top = -9.387
anchor_right = 2.583
anchor_bottom = 1.429
offset_left = 194.973
offset_top = 271.036
offset_right = -292.986
offset_bottom = -33.2596
text = "!"

[node name="ColorRect" type="ColorRect" parent="ColorRect/select/Button/info_button"]
visible = false
layout_mode = 0
offset_left = -32.0
offset_top = -176.0
offset_right = 157.0
offset_bottom = -54.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Label" type="Label" parent="ColorRect/select/Button/info_button/ColorRect"]
layout_mode = 0
offset_left = -3.0
offset_top = 1.0
offset_right = 312.0
offset_bottom = 48.0
scale = Vector2(0.603442, 0.729408)
theme_override_font_sizes/font_size = 12
text = "Balance mode makes all the territories 
income equal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dont_care" type="Button" parent="ColorRect/select/Button/info_button/ColorRect"]
offset_left = 140.339
offset_top = 95.3269
offset_right = 235.339
offset_bottom = 126.327
scale = Vector2(0.38834, 0.56926)
text = "I Dont Care
"

[node name="interesting" type="Button" parent="ColorRect/select/Button/info_button/ColorRect"]
layout_mode = 0
offset_left = 6.61782
offset_top = 97.822
offset_right = 99.6178
offset_bottom = 128.822
scale = Vector2(0.38834, 0.56926)
text = "Interesting"

[node name="Invalid" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 27.4825
offset_top = 28.0052
offset_right = 210.483
offset_bottom = 91.0052
scale = Vector2(0.0380189, 0.072036)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_p6dvg")
theme_override_font_sizes/font_size = 45
text = "Invalid"

[node name="Menu" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 0.4858
offset_top = 37.8128
offset_right = 188.486
offset_bottom = 68.8128
scale = Vector2(0.0298984, 0.0619363)
theme_override_fonts/font = ExtResource("4_j3d88")
text = "Back to Main Menu"

[node name="map" type="Sprite2D" parent="ColorRect"]
scale = Vector2(0.945711, 0.959137)

[connection signal="pressed" from="ColorRect/2p" to="." method="_on_2p_pressed"]
[connection signal="pressed" from="ColorRect/3p" to="." method="_on_3p_pressed"]
[connection signal="pressed" from="ColorRect/4p" to="." method="_on_4p_pressed"]
[connection signal="pressed" from="ColorRect/select/done_2p" to="." method="_on_done_2p_pressed"]
[connection signal="pressed" from="ColorRect/select/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/select/Button/info_button" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="ColorRect/select/Button/info_button/ColorRect/dont_care" to="." method="_on_dont_care_pressed"]
[connection signal="pressed" from="ColorRect/select/Button/info_button/ColorRect/interesting" to="." method="_on_interesting_pressed"]
[connection signal="pressed" from="ColorRect/Menu" to="." method="_on_menu_pressed"]
